--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ header {
 
 .right-side {
     margin-left: auto;
-    font-size: 10px;
+    font-size: 18px;
+    font-weight: 100;
 }
 
 ul {
@@ -39,4 +40,31 @@ a {
     color: white;
 }
 
+.cont-one {
+    background-color: #1F2937;
+    display: flex;
+    height: 400px;
+    color: #f9faf8;
+    justify-content: center;
+    align-items: center;
+    padding: 0 16px;
+}
+.main-title {
+    font-size: 48px;
+    font-weight: extra-bold;
+}
+
+.main-text {
+    font-size: 18px;
+}
+
+.main-img {
+    width: 200px;
+    height: 100px;
+    background-color: lightslategray;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
