--- a/style.css
+++ b/style.css
@@ -68,3 +68,13 @@ a {
     align-items: center;
 }
 
+.button-one {
+    background-color: #3882f6;
+    border-radius: 4px;
+    font-size: 16px;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    padding: 2px 16px;
+}
