--- a/style.css
+++ b/style.css
@@ -43,12 +43,19 @@ a {
 .cont-one {
     background-color: #1F2937;
     display: flex;
-    height: 400px;
+    height: 300px;
     color: #f9faf8;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    padding: 0 16px;
+    padding: 32px 62px;
 }
+
+.one-left {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
 .main-title {
     font-size: 48px;
     font-weight: extra-bold;
@@ -59,8 +66,8 @@ a {
 }
 
 .main-img {
-    width: 200px;
-    height: 100px;
+    width: 300px;
+    height: 150px;
     background-color: lightslategray;
     color: white;
     display: flex;
@@ -77,4 +84,5 @@ a {
     text-align: center;
     text-decoration: none;
     padding: 2px 16px;
+    align-self: flex-start;
 }
