--- a/style.css
+++ b/style.css
@@ -143,5 +143,48 @@ a {
 }
 
 .sign {
-    align-self: flex-end
+    align-self: flex-end;
+    font-weight: bold;
+}
+
+.cont-four {
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.four-text {
+    background-color: #3882f6;
+    color: white;
+    display: flex;
+    height: 25%;
+    border-radius: 8px;
+    align-items: center;
+    padding: 16px;
+    gap: 8px;
+    justify-content: space-between;
+}
+
+.signup {
+    flex: auto;
+}
+
+.signup-title {
+    font-weight: bold;
+}
+
+.signup-subtitle {
+    font-weight: lighter;
+}
+
+.button-four {
+    background-color: #3882f6;
+    border-radius: 4px;
+    font-size: 10px;
+    color: white;
+    border: 2px solid white;
+    text-align: center;
+    text-decoration: none;
+    padding: 4px 16px;
 }
