--- a/style.css
+++ b/style.css
@@ -188,3 +188,13 @@ a {
     text-decoration: none;
     padding: 4px 16px;
 }
+
+footer {
+    background-color: #1F2937;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    padding: 8px;
+}
