--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header {
     color: #f9faf8;
 }
 
-.right-side {
+.header-link {
     margin-left: auto;
     font-size: 18px;
     font-weight: 100;
@@ -48,7 +48,6 @@ a {
     justify-content: center;
     align-items: center;
     padding: 32px 62px;
-    flex: 1;
     gap: 8px;
 }
 
@@ -94,10 +93,9 @@ a {
     flex-direction: column;
     height: 300px;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 16px 16px;
     gap: 6px;
-    flex: 1;
 }
 
 .info-title {
@@ -139,7 +137,7 @@ a {
     height: 300px;
     align-items: center;
     justify-content: center;
-    padding: 5%;
+    padding: 20px 200px;
 }
 
 .sign {
